# dmxSerial

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  main.cpp  watch.ts
libs/: buildlibs.sh  hsv.hpp  parse.hpp
libs/Artnet/: ArtnetCommon.h  ArtnetUnix.h  IPAddress.cpp  IPAddress.h  UnixUDPReceiver.h  UnixUDPSender.h
src/: Artnet.hpp  DMXInterface.hpp  DMXMsg.hpp  MsgRunner.hpp  SimpleDMXSender.hpp  TimeInterval.hpp  main.cpp  udpServer.hpp
